# XServer

./: .gitignore
source/: CMakeLists.txt  MtOnline.sln  make_debug_server.bat  redis_start.bat  start_mysql.bat  stop_mysql.bat  version.sh  zXero.sln
source/AccountServer/: AccountServer.vcxproj  AccountServer.vcxproj.filters  account_dbwork.cpp  account_dbwork.h  account_manager.cpp  account_manager.h  main.cpp  online_user.cpp  online_user.h
source/GameCommon/: AbilityAndStatus.pb.cc  AbilityAndStatus.pb.h  AbilityAndStatus.proto.fflua.cc  AbilityAndStatus.proto.fflua.h  ActivityConfig.pb.cc  ActivityConfig.pb.h  ActivityConfig.proto.fflua.cc  ActivityConfig.proto.fflua.h  ActivityPacket.pb.cc  ActivityPacket.pb.h  ActivityPacket.proto.fflua.cc  ActivityPacket.proto.fflua.h  ActorBasicInfo.pb.cc  ActorBasicInfo.pb.h  ActorBasicInfo.proto.fflua.cc  ActorBasicInfo.proto.fflua.h  ActorConfig.pb.cc  ActorConfig.pb.h  ActorConfig.proto.fflua.cc  ActorConfig.proto.fflua.h  All.pb.cc  All.pb.h  All.proto.fflua.cc  All.proto.fflua.h  AllConfigEnum.pb.cc  AllConfigEnum.pb.h  AllConfigEnum.proto.fflua.cc  AllConfigEnum.proto.fflua.h  AllPacketEnum.pb.cc  AllPacketEnum.pb.h  AllPacketEnum.proto.fflua.cc  AllPacketEnum.proto.fflua.h  ArenaDb.pb.cc  ArenaDb.pb.h  ArenaDb.proto.fflua.cc  ArenaDb.proto.fflua.h  ArenaMessage.pb.cc  ArenaMessage.pb.h  ArenaMessage.proto.fflua.cc  ArenaMessage.proto.fflua.h  (+231 more)
source/GameServer/: CMakeLists.txt  GameServer.vcxproj  GameServer.vcxproj.filters  main.cpp  mt_types.cpp  mt_types.h  protobuf.natvis
source/LogServer/: CMakeLists.txt  LogServer.sln  LogServer.vcxproj  LogServer.vcxproj.filters  account_dbwork.h  log_server.cpp  log_server.h  main.cpp
source/LuaTest/: LuaTest.vcxproj  main.cpp  test.lua
source/ShareMemProc/: CMakeLists.txt  ShareMemProc.vcxproj  main.cpp
source/doc/: dbl服务器部署文档2.0.doc  equipment.eap  equipment.ldb  启动外网正式服务器必读3.0.doc  工程配置说明1.0.doc  服务器配置数据库操作文档1.0.doc  装备系统设计文档1.0.doc
source/include/: acceptor.h  active_model.h  app.h  asynclogging.h  buffer.h  channel.h  connector.h  date_time.h  dbcontext.h  dbhelper.h  dbwork.h  epoll_poller.h  (+47 more)
(+480 files in other folders)
