CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(sotcc)

INCLUDE_DIRECTORIES(include 3rd/lua-5.3.3/src)
INCLUDE_DIRECTORIES(include GameCommon)
INCLUDE_DIRECTORIES(include zxero)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET( CMAKE_BUILD_TYPE Debug )
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -D_DEBUG")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O2 -Wall -Wno-unused-value -Wno-enum-compare -g -ggdb")
#SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall -DNDEBUG")
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -fno-inline -ggdb")


ADD_SUBDIRECTORY(zxero)
ADD_SUBDIRECTORY(GameCommon)
ADD_SUBDIRECTORY(ShareMemProc)
ADD_SUBDIRECTORY(GameServer)
#ADD_SUBDIRECTORY(AccountServer)
